security-service.yml
apiVersion: v1
kind: Service
metadata:
  name: security
spec:
  selector:
    name: security
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
