security-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: security-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: security
          servicePort: 8080
